--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<head><title></title></head>
+<body>
+
+DAZN 1 🇪🇸
+
+</body>
+</html>
+
+
+
+
 <html>
 	<head>
 		
@@ -34,7 +46,7 @@
                 {
                     "default": false,
                     "type": "dash",
-                    "file": 'https://dce-fs-live-dazn-cdn.dazn.com/dashdrm/dazn-linear-017/stream.mpd',
+                    "file": 'https://dce-fs-live-dazn-cdn.dazn.com/dashdrm/dazn-linear-037/stream.mpd',
                     "drm": {
                         "clearkey": { "keyId": "82f8e2a17dac44c0a18f660479349c59", "key": "1b144f73e6fefe91cd05f850e2b589d0" }
                     },
@@ -61,5 +73,6 @@ autostart: true,
 <body>
 
 </html>
+
 
 
